--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.gls-online-filiale.de/*"],
-      "js": ["main.js"]
+      "js": ["main.js", "parsing.js"]
     }
   ],
   "browser_specific_settings": {
