Add translation, new icon and fix focus problems

--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,23 @@
 {
-  "description": "Adds a new text-box to the webpage of the GLS Bank, and copies from there IBAN, amount, subject, etc to the fields of the cash transfer form",
-  "manifest_version": 2,
-  "name": "gls_invoice_parser",
-  "version": "0.1",
-  "homepage_url": "https://kkrach.de/gls_invoice_parser/",
-  "icons": {
-    "48": "icons/gls-invoice-parsing-48.png",
-    "96": "icons/gls-invoice-parsing-96.png"
-  },
-  "content_scripts": [
-    {
-      "matches": ["*://*.gls-online-filiale.de/*"],
-      "js": ["main.js", "parser.js"]
-    }
-  ],
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "gls_invoice_parser@kkrach.de"
-    }
-}
+	"manifest_version": 2,
+	"name": "__MSG_extensionName__",
+	"description": "__MSG_extensionDescription__",
+	"version": "0.1",
+	"homepage_url": "https://kkrach.de/gls_invoice_parser/",
+	"icons": {
+		"48": "icons/gls-invoice-parser-48.png",
+		"96": "icons/gls-invoice-parser-96.png"
+	},
+	"default_locale": "en",
+	"content_scripts": [
+		{
+			"matches": ["*://*.gls-online-filiale.de/*"],
+			"js": ["main.js", "parser.js"]
+		}
+	],
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "gls_invoice_parser@kkrach.de"
+		}
+	}
 }
